[tool.poetry]
name = "belajar-py-openai"
version = "0.1.0"
description = ""
authors = ["Cecep Aprilianto <cecepaprilianto@gmail.com>"]
readme = "README.md"
packages = [{include = "belajar_py_openai"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
openai = "^0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
